--- a/Blood microbiome Plasma vs buffy coat.ipynb
+++ b/Blood microbiome Plasma vs buffy coat.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -20,18 +20,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dasithperera/anaconda/lib/python3.5/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n",
+      "/Users/dasithperera/anaconda/lib/python3.5/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -49,18 +60,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "PlasmaMED = pd.read_csv('PlasmaMED.csv')"
+    "PlasmaMED = pd.read_csv('/Users/dasithperera/Desktop/bigdataproposal/MEDoutput/PlasmaMED.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -247,7 +258,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,13 +278,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "PlasmaHomd = pd.read_csv('16SrRNA_HOMD_Plasma.csv')"
+    "PlasmaHomd = pd.read_csv('/Users/dasithperera/Desktop/bigdataproposal/MEDoutput/16SrRNA_HOMD_Plasma.csv')"
    ]
   },
   {
@@ -447,13 +458,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "BCMED = pd.read_csv('BuffycoatMED.csv')"
+    "BCMED = pd.read_csv('/Users/dasithperera/Desktop/bigdataproposal/MEDoutput/BuffycoatMED.csv')"
    ]
   },
   {
@@ -689,13 +700,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "Bchomd = pd.read_csv('BChomd.csv')"
+    "Bchomd = pd.read_csv('/Users/dasithperera/Desktop/bigdataproposal/MEDoutput/BChomd.csv')"
    ]
   },
   {
